tests/machine/x/cs/group_by_conditional_sum.error
MSBuild version 17.8.27+3ab07f0cf for .NET
  Determining projects to restore...
  All projects are up-to-date for restore.
/tmp/Program.cs(9,228): error CS1061: 'Dictionary<string, dynamic>' does not contain a definition for 'Key' and no accessible extension method 'Key' accepting a first argument of type 'Dictionary<string, dynamic>' could be found (are you missing a using directive or an assembly reference?) [/tmp/Test.csproj]

Build FAILED.

/tmp/Program.cs(9,228): error CS1061: 'Dictionary<string, dynamic>' does not contain a definition for 'Key' and no accessible extension method 'Key' accepting a first argument of type 'Dictionary<string, dynamic>' could be found (are you missing a using directive or an assembly reference?) [/tmp/Test.csproj]
    0 Warning(s)
    1 Error(s)

Time Elapsed 00:00:01.26
